--- a/theme.scss
+++ b/theme.scss
@@ -26,7 +26,7 @@ $enable-print-styles:       true;
 
 $theme-colors: (
   primary: #151515,
-  secondary: #00ffff,
+  secondary: pink,
   light: #f3f3f3,
   dark: #00ffff,
   info: #ccc,
